# Ralf

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTD.md  AGENTS.md  LICENSE  Makefile  README.md  TODO.md  architecture.yaml  install.sh  pyproject.toml  ralf  ralf-lxc.sh
.github/: dependabot.yml
RALF-lxc-bootstrap-v5.1/: README.md  install.sh
ansible/: ansible.cfg
ci/: gitops-pull.sh  gitops-runner.service  gitops-runner.timer  lint.yaml  pre-commit.sample  ralf-net-scan.service  ralf-net-scan.timer
cli/: ralf.sh
config/: default.yml
config/logrotate/: ralf
docs/: ARCHITECTURE.md  LOCAL_AI_README.md  README.md  SETUP.md  TODO.md  llm-adapter.md  open_tasks.md  scaling-scenarios.md
files/: ralf-ai
host/: build_lxc.sh
inventory/: groups.yaml  hosts.yaml  nodes.yaml  services.yaml
network/: proxmox-bridges.yaml  vlan-plan.yaml
portal/: README.md
ralf/: __init__.py  cli.py  config.py  logging.py  workflow.py
scripts/: ai_advisor.sh  ai_collect.sh  ai_redact.sh  bootstrap.sh  deploy_cloud_stack.sh  hardening.sh  install-gui.sh  install.sh  lisa_build_lxc.sh  pct-create-ralf.sh  pct-create-svc-foreman.sh  pct-create-svc-n8n.sh  pct-create-svc-postgres.sh  pct-create-svc-semaphore.sh  pct-create-svc-vaultwarden.sh  preflight.sh  ralf-installer.sh  ralf-lxc-lab.sh  ralf-net-scan.sh  setup_local_ai.sh  smoke.sh
secrets/: .sops.yaml  ai.sops.yaml
tests/: molecule_smoke.sh  opentofu_fmt.sh  ralf_ai_branch_check.sh  shellcheck.sh  smoke_build_lxc.sh  smoke_integrations.sh  smoke_wrapper.sh  test_planner.py
wrapper/: ralf-ai
(+251 files in other folders)
